fix scrollbar issues, small styling adjustments

--- a/www/styles/page.css
+++ b/www/styles/page.css
@@ -47,22 +47,28 @@ h3 > a > span.icon {
 }
 
 .gwd-sidebar {
-  width: 400px;
-  background-color: rgb(242, 236, 239);
-  height: 100vh;
+  width: 300px;
+  background-color: white;
+  height: 100%;
   overflow: auto;
   padding: 2rem;
+  position: sticky;
+  top: 0;
+  border-right: 1px solid #ededed;
 
   @media (max-width: 768px) {
     width: 100%;
     height: 100%;
     padding: 0;
+    position: relative;
+    border-right: 0;
+    border-bottom: 3px solid #ededed;
   }
 }
 
 .gwd-content {
-  width: calc(100vw - 400px);
-  height: 100vh;
+  max-width: 100ch;
+  height: 100%;
   overflow: scroll;
   margin: auto;
   background-color: white;
