--- a/www/components/shelf/shelf.css
+++ b/www/components/shelf/shelf.css
@@ -50,18 +50,6 @@
     }
   }
 
-  & hr {
-    display: block;
-    unicode-bidi: isolate;
-    margin-block-start: 0.5em;
-    margin-block-end: 0.5em;
-    margin-inline-start: auto;
-    margin-inline-end: auto;
-    overflow: hidden;
-    border-style: inset;
-    border-width: 1px;
-  }
-
   & div > ul {
     padding-left: 0;
 
@@ -96,7 +84,7 @@
     > svg {
       margin-top: 10px;
       margin-left: auto;
-      height: 20px;
+      height: 15px;
     }
   }
 
